# projects

./: Cargo.toml  README.md  rust-toolchain.toml
.githooks/: pre-commit
.github/workflows/: check.yml  docs.yml  test.yml
roguelike/: Cargo.toml  README.md
roguelike/docs/: 00-overview.md  02-component-system.md  03-map.md  04-creatures.md  05-hero.md  06-actions.md  07-items.md  README.md  actions.md  architecture.md  combat.md  component-system.md  creatures.md  hero.md  items.md  map.md  movement.md  overview.md  rendering.md
roguelike/src/: main.rs
roguelike/src/board/: board.rs  generator.rs  mod.rs  position.rs  tile.rs
roguelike/src/board/view/: board.rs  mod.rs  tile.rs  view_tile.rs
roguelike/src/combat/: mod.rs
roguelike/src/combat/view/: bar.rs  mod.rs  popup.rs
roguelike/src/components/: mod.rs
roguelike/src/experience/: mod.rs
roguelike/src/experience/view/: bar.rs
roguelike/src/flow/: mod.rs
roguelike/src/flow/view/: finish_menu.rs  game.rs  mod.rs  play.rs  start_menu.rs
roguelike/src/items/: mod.rs
roguelike/src/items/view/: mod.rs  potion.rs
roguelike/src/monster/: end_mob_turn.rs  mod.rs  panic.rs  split_ability.rs
roguelike/src/monster/view/: monster.rs
roguelike/src/movement/: mod.rs
roguelike/src/player/: mod.rs
roguelike/src/player/view/: player.rs
roguelike/src/render/: mod.rs
roguelike/src/term/: mod.rs  terminal.rs
roguelike/src/turn/: mod.rs
roguelike/src/view/: board.rs  mod.rs  view_tile.rs
shell/: Cargo.toml  README.md
shell/crates/shell/: Cargo.toml
shell/src/: ir.rs  main.rs
(+31 files in other folders)
